--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>top.oyoung</groupId>
-			<artifactId>ytool-spring-boot-starter</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>top.oyoung</groupId>-->
+			<!--<artifactId>ytool-spring-boot-starter</artifactId>-->
+			<!--<version>1.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
 		<!-- mybatis start -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -66,6 +66,17 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 		<!-- redis end -->
+
+		<!-- security start -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+		<!-- security end  -->
 	</dependencies>
 
 	<build>
