--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+		</dependency>
+
 		<!-- security end  -->
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
