--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
   port: 8080
-  servlet:
-    context-path: /boot
+#  servlet:
+#    context-path: /boot
   tomcat:
     uri-encoding: utf-8
 
 logging:
   path: logs/
-  level.root: debug
+  level.root: info
 
 spring:
   datasource:
