--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- test end -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
