--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<swagger-version>2.9.0</swagger-version>
+		<swagger-version>2.9.2</swagger-version>
 	</properties>
 
 	<dependencies>
@@ -107,7 +107,13 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 		<!-- JPA End -->
-    </dependencies>
+
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>3.11.2</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
